fix alignments

--- a/src/pages/sourcepage/themes/base-time-chart-theme.scss
+++ b/src/pages/sourcepage/themes/base-time-chart-theme.scss
@@ -1,6 +1,6 @@
 :global {
     .recharts-legend-item-text {
-        font-size: 1.2em;
+        font-size: 1.2rem;
         font-weight: bold;
     }
     .origin-selector {
@@ -76,7 +76,7 @@
         padding-top: 30px;
     }
     .bar-chart {
-        padding-top: 30px;
+        padding-top: 64px;
         .recharts-y-axis {
             .recharts-text.recharts-cartesian-axis-tick-value {
                 // fill: transparent;
@@ -98,7 +98,7 @@
         font-size: 1.2rem;
         font-weight: bold;
         line-height: 24px;
-        margin: -8px 0 5px;
+        margin: -8px 0 3px;
         text-align: center;
         width: 100%;
     }
